[package]
name = "generate"
version = "0.2.0"
authors = ["Ulrich Berthold <u@sansculotte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.16.8"
rand = "0.8.3"
structopt = "0.3"
cairo-rs = { version = "0.9.1", features = ["png"] }
