[package]
name = "degenerate"
version = "0.3.0"
authors = ["Ulrich Berthold <u@sansculotte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.5"
rand = "0.8.3"
structopt = "0.3"
noise = "0.7.0"
cairo-rs = { version = "0.15.11", features = ["png"] }
pbr = "1.0.4"
hound = "3.4.0"
rustfft = "6.0.1"
image = "0.24.2"
